--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  html {
+    font-family:
+     Poppins,
+      system-ui,
+      sans-serif;
+    font-size: 16px;
   }
 }
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
 }
+ .placeholder-custom::placeholder {
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1.6px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+  }
